--- a/main.html
+++ b/main.html
@@ -10,6 +10,19 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<nav>
+		<ul>
+        <a href="#">Home<br></a>
+        <a href="#">About us<br></a>
+        <a href="#">Contact us<br></a>
+		</ul>
+    </nav>
+	<h1>3 random images</h1>
+	 <img src=https://picsum.photos/id/123/200/300 alt="Girl in a jacket" width="300" height="200">
+	 <img src=https://picsum.photos/id/124/200/300 alt="Girl in a jacket" width="300" height="200">
+	<img src=https://picsum.photos/id/125/200/300 alt="Girl in a jacket" width="300" height="200">
+	
+		
 
 </body>
 
